# CityOS-Agentic-Stack-Planner-

./: .env.example  .gitignore  LICENSE  README.md  before_codex_resume.patch  changed_files_before_codex_resume.txt  pyproject.toml  start-runner.ps1  start-synth.ps1
.github/workflows/: sync-to-org.yml
.runs/tellme/: current.json
.tracefix-ui/: cityos_harness_check.py  llm_usage_totals.json  runner.pid
.tracefix-ui/web-data-endpoint-test/: demo-synthesis.json
.tracefix-ui/web-data-endpoint-test-final/: demo-synthesis.json
benchmark/: README.md  __init__.py  loader.py  underspec_eval.py
benchmark/tests/: test_loader.py  test_sim_cicd.py  test_sim_drug_discovery.py  test_sim_kitchen.py  test_sim_pharma_lab.py  test_sim_semiconductor.py
capability_bridge/: __init__.py  __main__.py  bridge.py  config.py
capability_service/: __init__.py  app.py  approved_capabilities.json  audit.py  auth.py  config.py  filtering.py  repository.py  schemas.py
cityos_mock_data/: __init__.py  cityos_capabilities.json  cityos_context_examples.json
docs/: ARCHITECTURE.html  ARCHITECTURE.md  CANONICAL_TEMPLATE_HARDENING_REPORT.md  CITYOS_MODULE_PLAN.md  TASKSPEC_INTEGRATION_REPORT.md
generated_cityos_apps/: codex-integration-smoke-synthesis.json
local-ui/: README.md  requirements-ui.txt  start-both.ps1  start-runner.ps1  start-synth.ps1  start-viewer.ps1  stop-ui.ps1
opencode_tmp_test/: Protocol.cfg  Protocol.tla  ir.json
scripts/: download_tla2tools.sh  export_smartroom_ocsort_labels.py  ocsort_tracks_to_tracefix_json.py  run_ocsort_from_det.py
tellme-potential-ui/: .env.example  README.md  package-lock.json  package.json
tellme_harness/: __init__.py  agent_loop.py  agent_protocol.py  answer_validator.py  capability_registry.py  cityos_discovery.py  cityos_mock.py  config.py  context_builder.py  context_validator.py  evidence_card.py  execution_plan.py  harness.py  intent_decomposition.py  llm_agent.py  llm_client.py  logging_store.py  orchestrator.py  query_analysis.py  route_policy.py  router.py  schemas.py  single_agent_runner.py  tool_executor.py  tracefix_adapter.py  tracefix_bundle.py  tracefix_coordination.py  tracefix_design_prompt.py  tracefix_execution_adapter.py  tracefix_projection.py  tracefix_toolchain.py  tracefix_workspace_adapter.py
tests/: test_capability_bridge.py  test_capability_discovery.py  test_capability_service.py  test_capability_service_phase2.py  test_capability_service_phase3.py  test_config_and_secrets.py  test_tracefix_task_projection.py
tracefix/: pipeline_timing.py  repair_progress.py
(+1647 files in other folders)
