[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tracefix"
version = "0.1.0"
description = "TraceFix: TLA+-verified coordination protocols for LLM multi-agent systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shuren Xia"},
    {name = "Qiwei Li"},
    {name = "Taqiya Ehsan"},
    {name = "Jorge Ortiz"},
]
dependencies = [
    "jsonschema",
    "pydantic>=2,<3",
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-tlaplus==1.5.0",
    "python-dotenv",
]

[project.urls]
Repository = "https://github.com/xsrxdc/TraceFix-Repairing-Agent-Coordination-Protocols"

[project.optional-dependencies]
agentic = ["openai", "anthropic"]
test = ["pytest", "pytest-asyncio"]
opencode = ["mcp"]

[project.scripts]
tracefix = "tracefix.runtime.cli:main"
tla-verify-pluscal = "tracefix.cli.cli:main"
tracefix-coord = "tracefix.runtime.coord_mcp.server:main"
tracefix-domain = "tracefix.runtime.domain_mcp.server:main"
tracefix-ui = "tracefix.ui.server:main"
tracefix-runner = "tracefix.runner_ui.server:main"
tracefix-cityos-synth = "tracefix.cityos_synth_ui.server:main"

[tool.setuptools.packages.find]
include = ["tracefix*", "benchmark*", "tellme_harness*", "cityos_mock_data*"]

[tool.setuptools.package-data]
tracefix = ["ui/static/*", "runner_ui/static/*", "cityos_synth_ui/static/*", "pipeline/PLUSCAL_RULES.md"]
cityos_mock_data = ["*.json"]
